--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="seccion1">
         <div class="container text-light">
             <img src="./assets/img/about-1.png" alt="">  
-            <div class="text-center">
+            <div class="texto">
                 <h2>Tomates 100% orgánicos</h2>    
                 <p>En tía tomate estamos comprometidos con tu salud y la de tu familia, de mode que <br>
                     probarás tomates ricos y sin sabor artificial </p>
@@ -59,7 +59,7 @@
     <!-- seccion3 -->
     <section class="seccion3">
         <div class="container text-center text-light">
-            <h1>NOSOTROS</h1>
+            <h1><strong>NOSOTROS</strong></h1>
         </div>
     </section>
 
@@ -88,8 +88,8 @@
     <!-- seccion contacto-->
     <section class="seccionContacto" >
         <div class="container text-center text-light">
-            <h1>¿Tomates para tu negocio?</h1>
-            <button>CLICK AQUI</button>
+            <h1><strong>¿Tomates para tu negocio?</strong></h1>
+            <button class="rounded-pill btn-lg"> <strong>CLICK AQUI</strong></button>
         </div>
     </section>
 
